# bootcamp-python

./: .pre-commit-config.yaml  COMMITS.md  README.md  hello.py  pyproject.toml
aula_01/: README.md  desafio.py  desafio_2.py
aula_02/: README.md  aula02.py  desafio.py  exercicio.py  pyproject.toml
aula_03/: README.md  desafio.py  exercicios.py  while_exercises.py
aula_04/: README.md  arquivos.py  desafio.py  exemplo.csv  exercicio_funcoes.py  exercicio_listas.py  exercicios_avancados.py
aula_05/: README.md
aula_06/: README.md  hello.py  pyproject.toml
aula_07/: README.md
aula_07/src/: etl.py  main.py
aula_08/: .gitignore  README.md  pyproject.toml
aula_08/files/: data.parquet
aula_08/src/: etl.py  pipeline.py
aula_09/: README.md  pyproject.toml
aula_09/src/: decorator_log.py  etl.py  timer_dec.py
aula_12/: README.md  csv_class.py  csv_test.py  exemplo.csv  pyproject.toml
aula_13_14/: pyproject.toml
aula_13_14/data/txt_files/: file_01.txt
aula_13_14/src/: __main__.py
aula_16/: README.md  pyproject.toml  teste_sqlmodel.py
aula_17/: aprendendo_sqlalchemy.py  pyproject.toml
